Fixed spacing in cchat details drawer component

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -384,6 +384,9 @@ label,
   padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
+}
+
+.profile-contents {
   justify-content: space-between;
 }
 
